更新入口文件

--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "oss-sign",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": {
     "name": "余阿伟"
   },
   "dependencies": {
     "crypto": "0.0.3"
+  },
+  "main": "oss-sign.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aweiu/oss-sign.git"
   }
 }
